# MegaNaiadsTrainer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SConstruct
src/: brain.cpp  brain.hpp  const.hpp  lib.cpp  lib.hpp  main.cpp  module.cpp  module.hpp  stateloader.hpp  trainer.cpp  trainer.hpp  trainingbrain.cpp  trainingbrain.hpp
src/godot/: brain.cpp  brain.hpp  game.cpp  game.hpp  gdlibrary.cpp
